--- a/src/App.css
+++ b/src/App.css
@@ -136,5 +136,5 @@ button#reset:hover::after {
 
 @font-face {
   font-family: "h1-heading";
-  src: url(./src/assets/Blocks.ttf);
+  src: url(src/assets/Blocks.ttf);
 }
